# src/Dream.Space.Models/Accounts/AccountTradeModel.cs
@@ -5,6 +5,26 @@ namespace Dream.Space.Models.Accounts
 {
     public class AccountTradeModel : IAccountTradeEntity
     {
+        public AccountTradeModel()
+        {
+            
+        }
+
+        public AccountTradeModel(IAccountTradeEntity entity)
+        {
+            if (entity != null)
+            {
+                TradeId = entity.TradeId;
+                AccountId = entity.AccountId;
+                EntryPrice = entity.EntryPrice;
+                EntryDate = entity.EntryDate;
+                Direction = entity.Direction;
+                CloseDate = entity.CloseDate;
+                SharesCount = entity.SharesCount;
+                ClosePrice = entity.ClosePrice;
+            }
+        }
+
         public int TradeId { get; set; }
         public int AccountId { get; set; }
         public decimal EntryPrice { get; set; }
